fix: candidate page alignment

--- a/app/candidate/[...nameId]/components/Header/ProgressMeter.module.scss
+++ b/app/candidate/[...nameId]/components/Header/ProgressMeter.module.scss
@@ -2,6 +2,6 @@
 
 .innerWrapper {
   @include lg {
-    width: 500px;
+    width: 450px;
   }
 }
